--- a/index.html
+++ b/index.html
@@ -3,74 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kiran's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Kiran Kumar</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background-color: #fff;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+        h1 {
+            font-size: 2.5em;
+            color: #333;
+            text-align: center;
+        }
+        p {
+            line-height: 1.6;
+            text-align: justify;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.8em;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Kiran's Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <section id="about" class="section">
-        <div class="container">
-            <h2>About Kiran</h2>
-            <p>Insert bio and information about Kiran here.</p>
-        </div>
-    </section>
-
-    <section id="portfolio" class="section">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <div class="project">
-                <h3>Project Title</h3>
-                <p>Description of the project.</p>
-                <a href="#">View Project</a>
-            </div>
-            <!-- More projects can be added similarly -->
-        </div>
-    </section>
-
-    <section id="blog" class="section">
-        <div class="container">
-            <h2>Blog</h2>
-            <div class="blog-post">
-                <h3>Blog Post Title</h3>
-                <p>Content of the blog post.</p>
-                <a href="#">Read More</a>
-            </div>
-            <!-- More blog posts can be added similarly -->
-        </div>
-    </section>
-
-    <section id="contact" class="section">
-        <div class="container">
-            <h2>Contact Kiran</h2>
-            <form action="#" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Kiran. All rights reserved.</p>
-        </div>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>Kiran Kumar</h1>
+        </header>
+        <section>
+           
+        </section>
+        <section>
+           
+        </section>
+        <footer class="footer">
+            &copy; 2024 Kiran Kumar
+        </footer>
+    </div>
 </body>
 </html>
