--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,49 +8,81 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
             margin: 0;
             padding: 0;
+            background-color: #f9f9f9; /* Light background */
+            color: #333; /* Dark text color */
         }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-            background-color: #fff;
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+
+        header {
+            background-color: #ff6347; /* Tomato Red header */
             padding: 20px;
+            text-align: center;
+            color: white;
         }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+
         h1 {
             font-size: 2.5em;
-            color: #333;
-            text-align: center;
+            margin-bottom: 20px;
         }
+
         p {
+            font-size: 1.1em;
             line-height: 1.6;
-            text-align: justify;
         }
-        .footer {
+
+        .section {
+            margin-bottom: 40px;
+        }
+
+        footer {
+            background-color: #333; /* Dark footer */
+            color: white;
             text-align: center;
-            margin-top: 20px;
-            font-size: 0.8em;
-            color: #666;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
+
 <body>
+
+    <header>
+        <h1>Kiran Kumar</h1>
+        <p></p>
+    </header>
+
     <div class="container">
-        <header>
-            <h1>Kiran Kumar</h1>
-        </header>
-        <section>
-           
+        <section class="section">
+            <h2></h2>
+            <p></p>
         </section>
-        <section>
-           
+
+        <section class="section">
+            <h2></h2>
+            <p></p>
         </section>
-        <footer class="footer">
-            &copy; 2024 Kiran Kumar
-        </footer>
+
+        <section class="section">
+            <h2>Contact Me</h2>
+            <p>Email: kirankumarvnnaikofficial@gmail.com<br>
+               </p>
+        </section>
     </div>
+
+    <footer>
+        &copy; 2024 Kiran Kumar
+    </footer>
+
 </body>
+
 </html>
+
