--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ header {
     text-align: center;
 }
 
-.profile-picture {
+.profile-img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
