--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ footer {
 <body>
     <header>
         <div class="profile-header">
-            <img id="profile-img" src="" alt="Profile Picture">
+            <img id="profile-img" src="https://pbs.twimg.com/profile_images/1818589353561440257/6mGFsuo7_400x400.jpg" alt="Profile Picture">
     </div>
             <h1>Kiran</h1>
             <p></p>
@@ -118,7 +118,7 @@ footer {
     
     <footer>
         <p>&copy; 2024 Kiran. All rights reserved.</p>
-        <a href="https://twitter.com/">Twitter</a>
+        <a href="https://x.com/Kiran4637421">Twitter</a>
         <a href="https://linkedin.com/in/">LinkedIn</a>
         <!-- Add more social media links as needed -->
     </footer>
