--- a/index.html
+++ b/index.html
@@ -2,39 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal website for showcasing projects and information.">
+    <meta name="keywords" content="personal website, portfolio, projects, contact">
+    <meta name="robots" content="index, follow">
     <title>Kiran</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="header-container">
+            <a class="logo" href="#"><img src="logo.png" alt="My Logo"></a>
+            <nav>
+                <ul class="nav-menu">
+                    <li><a href="#">Home</a></li>
+                     <li><a href="#">About Me</a></li>
+                <li><a href="mailto:kirankumarvnnaik@gmail.com">Contact</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <section id="home">
-        <h1>Welcome to My Website</h1>
-        <p></p>
-    </section>
-    <section id="about">
-        <h2>About Me</h2>
-        <p></p>
-    </section>
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <p></p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>kirankumarvnnaik@gmail.com</p>
-    </section>
+    <main>
+        <section class="intro">
+            <h1>Welcome to My Personal Website</h1>
+            <p>Hello! I am Kiran,</p>
+        </section>
+    </main>
     <footer>
-        <p>&copy; 2024 Kiran Kumar</p>
+        <div class="footer-container">
+            <ul class="footer-links">
+                <li><a href="#">About Me</a></li>
+                <li><a href="mailto:kirankumarvnnaik@gmail.com">Contact</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p>&copy; 2024 Kiran. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
