--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="board.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img\avocado.ico">
     <script src="relog.js"></script>
     <title>Kiran</title>
