--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <div class="cuadro">
             <div class="info">
                 <center>
-                    <h3 id="fecha"></h3>
-                    <h1 id="relog"></h1>
+                    <h1>Kiran</h1>
                 </center>
 
             </div>
