--- a/index.html
+++ b/index.html
@@ -1,112 +1,121 @@
 
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img\avocado.ico">
-    <script src="relog.js"></script>
-    <title>Kiran</title>
+    <title>Kiran Kumar V N - Personal Blog</title>
+    <style>
+        /* Basic Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Font and Color Settings */
+        @font-face {
+            font-family: 'Frutiger';
+            src: url('fonts/Frutiger-Regular.woff2') format('woff2'), /* Adjust the path and format */
+                 url('fonts/Frutiger-Bold.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        body {
+            font-family: 'Frutiger', sans-serif;
+            color: #333;
+            line-height: 1.6;
+            padding-top: 60px; /* To avoid content being hidden under fixed header */
+        }
+
+        header {
+            background-color: #3c1d1a; /* Dark Red */
+            color: #f8d830; /* Dark Yellow */
+            padding: 1rem 0;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        header .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 1rem;
+        }
+
+        header h1 {
+            font-size: 2rem;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+        }
+
+        nav ul li {
+            margin-left: 1rem;
+        }
+
+        nav ul li a {
+            color: #f8d830; /* Dark Yellow */
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+
+        .section {
+            padding: 2rem 1rem;
+            margin-top: 60px; /* Space for fixed header */
+        }
+
+        .home {
+            background-color: #f2f2f2;
+        }
+
+        .about, .blog, .contact {
+            background-color: #ffffff;
+        }
+
+        footer {
+            background-color: #3c1d1a; /* Dark Red */
+            color: #f8d830; /* Dark Yellow */
+            text-align: center;
+            padding: 1rem 0;
+        }
+
+        footer .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 1rem;
+        }
+    </style>
 </head>
-
-<body onload="inicio()">
-    <div class="container">
-        <div>
-           
+<body>
+    <header>
+        <div class="container">
+            <h1>Kiran Kumar V N</h1>
         </div>
-
-        <div>
-           
+    </header>
+  <iframe src="https://www5.cbox.ws/box/?boxid=952207&boxtag=bdAw4Z" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
+    <section id="contact" class="section contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:kirankumarvnnaik@gmail.com">kirankumarvnnaik@gmail.com</a></p>
         </div>
-        <div class="cuadro">
-            <div class="info">
-                <center>
-                    <h1>Kiran</h1>
-                </center>
-
-            </div>
-            <div>
-                <form action="https://www.google.com/search" method="GET">
-                  <input type="hidden" name="sitesearch" value="kirankumar.pages.dev">
-                    <input type='search' placeholder="Search..." id="q" name="q" autofocus="true" autocomplete="off">
-                </form>
-            </div>
-            <div class="url_info">
-                <div class="columna">
-                    <div class="col_50">
-                        <h2>Social</h2>
-                        <nav>
-                            <ul>
-                                <li><a href="https://mail.google.com/mail/u/0/#inbox" class="soc">Correo</a></li>
-                                <li> <a href="https://www.youtube.com/" class="soc">Youtube</a></li>
-                                <li> <a href="https://web.whatsapp.com/" class="soc">Whatsapp</a></li>
-                                <li> <a href="https://www.reddit.com/" class="soc">Reddit</a></li>
-                                <li><a href="https://www.facebook.com/" class="soc">Facebook</a></li>
-                                <li> <a href="https://www.instagram.com/" class="soc">Instragram</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="col_50">
-                        <h2>Utilidades </h2>
-                        <nav>
-                            <ul>
-                                <li><a href="https://docs.google.com/document/u/0/">Google Docs</a></li>
-                                <li><a href="https://classroom.google.com/">Google Classroom</a></li>
-                                <li><a href="https://drive.google.com/drive/">Google Drive</a></li>
-                                <li><a href="https://meet.google.com/?hs=197&authuser=0">Google Meet</a></li>
-                                <li><a href="https://www.google.com/maps?authuser=0">Google Maps</a></li>
-                                <li><a href="https://www.microsoft365.com/?auth=2">Microsoft 365</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                <div class="columna">
-                    <div class="col_33">
-                        <h2>Data</h2>
-                        <nav>
-                            <ul>
-                                <li><a href="https://www.inegi.org.mx/">INEGI</a></li>
-                                <li><a href="https://www.banxico.org.mx/SieInternet/">Banxico</a></li>
-                                <li><a href="https://www.imf.org/en/Data">IMF</a></li>
-                                <li><a href="https://data.worldbank.org/">World Bank</a></li>
-                                <li><a href="https://www.fao.org/faostat/es/#home">FAO</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="col_33">
-                        <h2>Libros</h2>
-                        <nav>
-                            <ul>
-                                <li><a href="https://libgen.is/">Lib Gen</a></li>
-                                <li><a href="https://annas-archive.org/">Annas Archive</a></li>
-                                <li><a href="https://elfondoenlinea.com/">FCE</a></li>
-                                <li><a
-                                        href="https://www.bidi.unam.mx/index.php/colecciones-digitales/bases-de-datos/articulos-de-ciencias-sociales-y-humanidades">BIDI
-                                        UNAM</a></li>
-                                <li><a href="https://scribd.vpdfs.com/">Vpdfs</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="col_33">
-                        <h2> Anon</h2>
-                        <nav>
-                            <ul>
-                                <li><a href="https://www.4chan.org">4chan</a></li>
-                                <li><a href="https://chan.mx/">Chan.mx</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-
-                </div>
-            </div>
-            <div>
-            </div>
-
+    </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Kiran Kumar V N. All rights reserved.</p>
         </div>
-
+    </footer>
 </body>
-
 </html>
-
