--- a/index.html
+++ b/index.html
@@ -1,121 +1,63 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kiran Kumar V N - Personal Blog</title>
+    <title>Kiran Kumar</title>
     <style>
-        /* Basic Reset */
-        * {
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* Font and Color Settings */
-        @font-face {
-            font-family: 'Frutiger';
-            src: url('fonts/Frutiger-Regular.woff2') format('woff2'), /* Adjust the path and format */
-                 url('fonts/Frutiger-Bold.woff2') format('woff2');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        body {
-            font-family: 'Frutiger', sans-serif;
-            color: #333;
-            line-height: 1.6;
-            padding-top: 60px; /* To avoid content being hidden under fixed header */
-        }
-
-        header {
-            background-color: #3c1d1a; /* Dark Red */
-            color: #f8d830; /* Dark Yellow */
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-
-        header .container {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
+            height: 100vh;
         }
-
-        header h1 {
-            font-size: 2rem;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-        }
-
-        nav ul li {
-            margin-left: 1rem;
-        }
-
-        nav ul li a {
-            color: #f8d830; /* Dark Yellow */
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
-
-        .section {
-            padding: 2rem 1rem;
-            margin-top: 60px; /* Space for fixed header */
-        }
-
-        .home {
-            background-color: #f2f2f2;
-        }
-
-        .about, .blog, .contact {
-            background-color: #ffffff;
-        }
-
-        footer {
-            background-color: #3c1d1a; /* Dark Red */
-            color: #f8d830; /* Dark Yellow */
+        .container {
             text-align: center;
-            padding: 1rem 0;
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-
-        footer .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
+        h1 {
+            margin: 0;
+            font-size: 2em;
+            color: #333;
+        }
+        .links {
+            margin-top: 20px;
+        }
+        .links a {
+            display: block;
+            text-decoration: none;
+            color: #007bff;
+            background-color: #e7f0ff;
+            padding: 10px 15px;
+            margin: 10px 0;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .links a:hover {
+            background-color: #d0e1ff;
         }
     </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Kiran Kumar V N</h1>
+    <div class="container">
+        <h1>Kiran Kumar</h1>
+        <div class="links">
+            <!-- Replace # with your actual links and add titles -->
+            <a href="mailto:kirankumarvnnaik@gmail.com" target="_blank">Email</a>
+            <a href="https://kirankumar.pages.dev/" target="_blank">Website</a>
+            <a href="https://www.linkedin.com/in/kiran-kumar-37a3a1321/" target="_blank">LinkedIn</a>
+            <a href="https://x.com/Kiran4637421" target="_blank">Twitter</a>
+            <a href="https://github.com/kirankumarvn" target="_blank">GitHub</a>
+            <a href="https://t.me/kirankumarvn" target="_blank">Telegram</a>
+            <!-- Add more links as needed -->
         </div>
-    </header>
-  <iframe src="https://www5.cbox.ws/box/?boxid=952207&boxtag=bdAw4Z" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
-    <section id="contact" class="section contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:kirankumarvnnaik@gmail.com">kirankumarvnnaik@gmail.com</a></p>
-        </div>
-    </section>
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Kiran Kumar V N. All rights reserved.</p>
-        </div>
-    </footer>
+    </div>
 </body>
 </html>
