--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             background-color: #d0e1ff;
         }
     </style>
+    <script>
+	window.location.replace("mailto:kirankumarvnnaikofficial@gmail.com");
+	</script>
 </head>
 <body>
     <div class="container">
