--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <a href="https://x.com/Kiran4637421" target="_blank">Twitter</a>
             <a href="https://github.com/kirankumarvn" target="_blank">GitHub</a>
             <a href="https://t.me/kirankumarvn" target="_blank">Telegram</a>
+	    <a href="https://www.youtube.com/channel/UCzsPlxhrBv3k1qFlbIC2ewA" target="_blank">YouTube</a>
             <!-- Add more links as needed -->
         </div>
     </div>
