--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kiran Kumar</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Kiran Kumar</h1>
+    <ul>
+        <li><a href="mailto:kirankumarvnnaik@gmail.com">kirankumarvnnaik@gmail.com</a></li>
+        <li><a href="mailto:kirankumarvnnaikofficial@gmail.com">kirankumarvnnaikofficial@gmail.com</a></li>
+        <li><a href="https://x.com/Kiran4637421">X Profile</a></li>
+        <li><a href="https://www.youtube.com/channel/UCzsPlxhrBv3k1qFlbIC2ewA">YouTube Channel</a></li>
+        <li><a href="https://www.linkedin.com/in/kiran-kumar-37a3a1321/">LinkedIn Profile</a></li>
+        <li><a href="https://github.com/kirankumarvn/">GitHub Profile</a></li>
+        <li><a href="https://t.me/kirankumarvn">Telegram</a></li>
+    </ul>
+</body>
+</html>
 
