--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="https://www.linkedin.com/in/kiran-kumar-37a3a1321/">LinkedIn Profile</a></li>
         <li><a href="https://github.com/kirankumarvn/">GitHub Profile</a></li>
         <li><a href="https://t.me/kirankumarvn">Telegram</a></li>
+        <li><a href="https://kirankumar.pages.dev/">Website</a></li>
     </ul>
 </body>
 </html>
