--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Kiran Kumar</h1>
+       <form action="https://www.google.com/search" method="get">
+        <input type="hidden" name="q" value="site:kirankumar.pages.dev">
+        <input type="text" name="query" placeholder="search">
+        <button type="submit">Search</button>
+    </form>
     <ul>
         <li><a href="mailto:kirankumarvnnaik@gmail.com">kirankumarvnnaik@gmail.com</a></li>
         <li><a href="mailto:kirankumarvnnaikofficial@gmail.com">kirankumarvnnaikofficial@gmail.com</a></li>
