--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <li><a href="https://github.com/kirankumarvn/">GitHub Profile</a></li>
         <li><a href="https://t.me/kirankumarvn">Telegram</a></li>
         <li><a href="https://kirankumar.pages.dev/">Website</a></li>
+        <li><a href="http://webcache.googleusercontent.com/search?q=cache%3Ahttps%3A%2F%2Fkirankumar.pages.dev%2F">WebCache</a></li>
+        
     </ul>
     <iframe src="https://www5.cbox.ws/box/?boxid=952207&boxtag=bdAw4Z" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
 </body>
