--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   gtag('config', 'G-1CB9HNE67E');
 </script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "215fd9c3b10b4f238ba4a9b1a948159c"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 <body>
     <h1>Kiran Kumar</h1>
